ASUSFETest/src/objects/Lead_Interest__c.object
<CustomObject>
    <description>Academic Interest or Program a prospective student is interested in pursuing. The prospective student can be a Lead or a Contact.</description>
    <fields>
        <fullName>Academic_Interest__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Academic Interest</label>
        <referenceTo>Academic_Interest__c</referenceTo>
        <relationshipLabel>Lead Interests</relationshipLabel>
        <relationshipName>Lead_Interests_Academic_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>College</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Lead Interests</relationshipLabel>
        <relationshipName>Lead_Interests_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lead Interests</relationshipLabel>
        <relationshipName>Lead_Interests_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eligibility__c</fullName>
        <description>Field used for recruiting to determine if the Lead meets the requirements of the program.</description>
        <inlineHelpText>Does the Lead meet program requirements?</inlineHelpText>
        <label>Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Application_Number__c</fullName>
        <description>Sybase external application number. Used to match Lead Interest with partial application</description>
        <externalId>true</externalId>
        <label>External Application Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Interests</relationshipLabel>
        <relationshipName>Lead_Interests_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Plan__c.Plan_Status__c</field>
                <operation>equals</operation>
                <value>Active, Teach Out</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Lead Interests</relationshipLabel>
        <relationshipName>Lead_Interests_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Source__c</fullName>
        <label>Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASU UG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Fair - Int</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Fair - US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Scores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualifying__c</fullName>
        <description>Prospective student&apos;s level of interest</description>
        <inlineHelpText>Measure of the prospective student&apos;s interest.</inlineHelpText>
        <label>Qualifying</label>
        <picklist>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Source__c</fullName>
        <label>Source Subtype</label>
        <picklist>
            <controllingField>Primary_Source__c</controllingField>
            <picklistValues>
                <fullName>Coll Technology &amp; Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College of Public Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cronkite School-Journ/MassComm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herberger Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ira A Fulton Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberal Arts &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MaryLouFulton Teachers College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Interdis Arts &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing &amp; Health Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Letters &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W.P. Carey School of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&apos;Connor College of Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASU Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA Today</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS Applying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS GRE Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS Personal Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Session - Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Session - Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE Subject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOEFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idealist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Email_ID__c</fullName>
        <description>Retrieves ID for the type of Lead Interest. If it is related to a Lead record, then Lead ID. Else it is Contact ID.</description>
        <formula>IF( ISBLANK( Contact__c ), Leads__r.Id,  Contact__r.Id )</formula>
        <label>Send Email ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <formula>IF(ISBLANK( Contact__c ),  Leads__r.Email,  Contact__r.Email   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Lead Interests</relationshipLabel>
        <relationshipName>Lead_Interests_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag records as tests so they will not appear in reports.</description>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Lead Interest</label>
    <listViews>
        <fullName>Academic_Interests_Contacts</fullName>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Term__c</columns>
        <columns>Academic_Interest__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Source__c</columns>
        <columns>Secondary_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Academic_Interest__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Contact__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Academic Interest - Contacts</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_Lead_Interests_BIOMED</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Source__c</columns>
        <columns>Secondary_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan__c</field>
            <operation>contains</operation>
            <value>Biomedical Engineering</value>
        </filters>
        <filters>
            <field>Plan__c</field>
            <operation>equals</operation>
            <value>Biological Design (PhD)</value>
        </filters>
        <label>All Lead Interests BIOMED</label>
        <sharedTo>
            <roleAndSubordinates>ES_Fulton_Engineering</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Lead_Interests_Blank</fullName>
        <columns>NAME</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Term__c</columns>
        <columns>Primary_Source__c</columns>
        <columns>Secondary_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Academic_Interest__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Plan__c</field>
            <operation>equals</operation>
        </filters>
        <label>Blank College-Interest-Plan</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_Lead_Interests_GRES</fullName>
        <columns>NAME</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Secondary_Source__c</columns>
        <columns>Term__c</columns>
        <columns>Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>Ira A Fulton Engineering</value>
        </filters>
        <label>All Lead Interests GRES</label>
        <sharedTo>
            <roleAndSubordinates>ES_Fulton_Engineering</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Lead_Interests_GRGC</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Source__c</columns>
        <columns>Secondary_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>Graduate College</value>
        </filters>
        <label>All Lead Interests GRGC</label>
        <sharedTo>
            <role>GE_Grad_Edu</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Lead_Interests_GRLA</fullName>
        <columns>NAME</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Secondary_Source__c</columns>
        <columns>Term__c</columns>
        <columns>Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>Liberal Arts &amp; Sciences</value>
        </filters>
        <label>All Lead Interests GRLA</label>
        <sharedTo>
            <roleAndSubordinates>ES_Liberal_Arts_Sciences</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Lead_Interests_GRNH</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Source__c</columns>
        <columns>Secondary_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>Health Solutions</value>
        </filters>
        <label>All Lead Interests GRNH</label>
        <sharedTo>
            <roleAndSubordinates>ES_Health_Solutions</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Lead_Interests_GRPP</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Source__c</columns>
        <columns>Secondary_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>College of Public Programs</value>
        </filters>
        <label>All Lead Interests GRPP</label>
        <sharedTo>
            <roleAndSubordinates>ES_Coll_Pub_Programs</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Lead_Interests_GRSU</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Source__c</columns>
        <columns>Secondary_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>School of Sustainability</value>
        </filters>
        <label>All Lead Interests GRSU</label>
        <sharedTo>
            <roleAndSubordinates>ES_Sustainability</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Lead_Interests_GRSU_Exec</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Source__c</columns>
        <columns>Secondary_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>School of Sustainability</value>
        </filters>
        <filters>
            <field>Plan__c</field>
            <operation>startsWith</operation>
            <value>Executive Masters in Sustainability</value>
        </filters>
        <label>All Lead Interests GRSU Exec</label>
        <sharedTo>
            <roleAndSubordinates>ES_Sustainability</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Lead_Interests_GRTE</fullName>
        <columns>Type__c</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Source__c</columns>
        <columns>Secondary_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>MaryLouFulton Teachers College</value>
        </filters>
        <label>All Lead Interests GRTE</label>
        <sharedTo>
            <roleAndSubordinates>ES_Teachers_College</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Lead_Interests_GRTS</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Source__c</columns>
        <columns>Secondary_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>Coll Technology &amp; Innovation</value>
        </filters>
        <label>All Lead Interests GRTS</label>
        <sharedTo>
            <roleAndSubordinates>Coll_Tech_Innovation</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Applied_This_Month</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Applied</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Applied This Month</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Applied_w_no_term</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Source__c</columns>
        <columns>Secondary_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Applied</value>
        </filters>
        <filters>
            <field>Term__c</field>
            <operation>equals</operation>
        </filters>
        <label>Applied w/ No Term</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>LastWeeks_Lead_Interests</fullName>
        <columns>NAME</columns>
        <columns>Leads__c</columns>
        <columns>Contact__c</columns>
        <columns>Primary_Source__c</columns>
        <columns>Secondary_Source__c</columns>
        <columns>Term__c</columns>
        <columns>Plan__c</columns>
        <columns>College__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Last Week&apos;s Lead Interests ALL</label>
        <sharedTo/>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>Lead Interest Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Interests</pluralLabel>
    <recordTypes>
        <fullName>Admin</fullName>
        <active>true</active>
        <description>Viewable to administrators</description>
        <label>Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>User</fullName>
        <active>true</active>
        <description>Viewable to non-administrators</description>
        <label>User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>